<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history"/>
    <item
        android:id="@+id/budgetFragment"
        android:icon="@drawable/ic_nav_budget"
        android:title="@string/nav_budget"/>
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_nav_reports"
        android:title="@string/nav_reports"/>
    <item
        android:id="@+id/aiChatFragment"
        android:icon="@drawable/ic_nav_ai"
        android:title="@string/nav_ai"/>
</menu>
